[macOS] Only show a context menu action to "Copy Cropped Image" when appropriate https://bugs.webkit.org/show_bug.cgi?id=239712 rdar://92239384

Reviewed by Darin Adler.

Implement gating for the "Copy Cropped Image" context menu item. This is similar to the current gating mechanism
used for visual look up, wherein the Look Up menu item is asynchronously appended to the context menu.

In this case, we only append the "Copy Cropped Image" menu item in the case where `requestImageAnalysisMarkup`
completes with a non-null result.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::close):
(WebKit::WebPageProxy::showContextMenu):
(WebKit::WebPageProxy::contextMenuItemSelected):
* UIProcess/WebPageProxy.h:

Cache the image analysis results for "Copy Cropped Image" in a member variable, `m_croppedImageForContextMenu`.

* UIProcess/mac/WebContextMenuProxyMac.mm:
(WebKit::WebContextMenuProxyMac::getContextMenuFromItems):
* UIProcess/mac/WebPageProxyMac.mm:
(WebKit::WebPageProxy::setCroppedImageForContextMenu):
(WebKit::WebPageProxy::handleContextMenuCopyCroppedImage):

Canonical link: https://commits.webkit.org/249961@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293340 268f45cc-cd09-0410-ab3c-d52691b4dbfc